# libserial

./: CMakeLists.txt  LICENSE  Makefile  README.md  build.conf
doc/: README.md  changelog  changelog.md  libserial.txt  serial.txt
include/: libserial.h
src/: libserial.cpp  serial.cpp  version.cpp  version.cpp.in
src/include/: serial.h
test/: nanoconsole.cpp  nanoterm.cpp  test_libserial.cpp
